fixes overscroll on mobile

--- a/source/_assets/scss/pages/index.scss
+++ b/source/_assets/scss/pages/index.scss
@@ -460,6 +460,7 @@ div.footer {
 	position: relative;
 	width: 100%;
 	padding-top: 90px;
+	overflow: hidden;
 }
 div.footer > div.links {
 	display: flex;
